# django-celery-commands

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
django_celery_commands/: __init__.py  apps.py  discover.py
django_celery_commands/management/commands/: _dynamic.py  celery_tasks.py
django_celery_commands/tests/: test_discovery.py
